Gaurav-AWS-Playlist-with-Terraform/lambda-function-in-private-subnet/security_group.tf
resource "aws_security_group" "lambda" {
  name_prefix = "lambda-private-nat-"
  vpc_id      = aws_vpc.main.id

  egress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
